--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
